--- a/EA2/EA2.html
+++ b/EA2/EA2.html
@@ -41,7 +41,7 @@
 
                 var vsSource = 'attribute vec2 pos;'+
 
-                    'void main(){ gl_Position = vec4(pos*0.2-0.5, 0, 1); }'; 
+                    'void main(){ gl_Position = vec4(pos*0.2, 0, 1); }'; 
 
                 var vs = gl.createShader(gl.VERTEX_SHADER);
 
@@ -76,24 +76,25 @@
                 gl.useProgram(prog);
 
      
-
                 // Vertex data.
 
                 var vertices = new Float32Array([ //
-
-                    -2,-3, 2,0, 10,2, 3,10, 3,0, 10,0, 5,9, -10,7, 0,10, -5, 6,
-                    3,-8, 5,-4, 6,3, 7,-2, 9,5, 1,4, 7,5,  -3,6,  8,4,  -9,3,
-                    3,-5, 4,-3, 7,4, 1,3, 6,9, 2,1, 4,-3, -7,1, -2,5, 3,6 ]);
+                -5,5, 5,5, -2,2.5, 2,2.5, 0,0.05, 0,1, -0.35,0.5, 0.35,0.5, -2.5,0.05, -3.5,1, -4.5,3, 2.5,0.05, 3.5,1, 4.5,3,
+                -3.5,2.5, -2,1, 2,1, 3.5,2.5,
+                -2.5,-0.1, 0,-0.1, 2.5,-0.1,
+                -3.5,-1.5, -4.5,-5, -2.5,-4, -1,-3, -2,-2,
+                3.5,-1.5, 4.5,-5, 2.5,-4, 1,-3, 2,-2,
+                0,-2, -0.5,-1.5, 0.5,-1.5
+                     ]);
 
                 // Index data.
 
                 var indices = new Uint16Array([ //
-
-                0,3, 2,0, 2,8, 3,2, 3,0, 1,0, 5,6, 2,7, 0,5, 11,14,
-                3,15, 11,19, 19,6, 8,10, 1,16, 15,17, 4,18, 9,14, 4,7, 13,19,
-                13,6, 6,1, 12,16, 20,24, 21,9, 22,26, 22,29, 29,28, 28,23, 23,25, 25,27, 20,1]);
-
-     
+                0,2, 1,3, 2,4, 3,4, 4,5, 5,6, 5,7, 4,8, 8,9, 9,10, 10,0, 4,11, 11,12, 12,13, 13,1,
+                10,14, 14,15, 15,4, 14,9, 9,15, 8,15, 4,16, 16,17, 17,13, 11,16, 16,12, 12,17, 
+                18,19, 19,20, 18,21, 21,22, 22,23, 23,24, 24,19, 18,25, 21,25, 21,23, 23,25, 25,19,
+                20,26, 26,27, 27,28, 28,29, 29,19, 28,30, 30,26, 30,20, 30,19, 28,26, 19,31, 31,32, 31,33
+]);   
 
                 // Setup vertex buffer object.
 
