--- a/EA2/EA2.html
+++ b/EA2/EA2.html
@@ -75,7 +75,7 @@
 
                 gl.useProgram(prog);
 
-     
+                //START EA2
                 // Vertex data.
 
                 var vertices = new Float32Array([ //
@@ -95,6 +95,8 @@
                 18,19, 19,20, 18,21, 21,22, 22,23, 23,24, 24,19, 18,25, 21,25, 21,23, 23,25, 25,19,
                 20,26, 26,27, 27,28, 28,29, 29,19, 28,30, 30,26, 30,20, 30,19, 28,26, 19,31, 31,32, 31,33
 ]);   
+
+                //END EA2
 
                 // Setup vertex buffer object.
 
