--- a/EA3/EA3.html
+++ b/EA3/EA3.html
@@ -44,7 +44,9 @@
             'varying vec4 color;' +
             'void main(){' +
             'color = col;' +
-            'gl_Position = vec4(pos-0.5, 7);' +
+            //START EA3
+            'gl_Position = vec4(pos, 5);' +
+            //END EA3
             '}';
 
         var vs = gl.createShader(gl.VERTEX_SHADER);
@@ -82,68 +84,48 @@
 
         gl.useProgram(prog);
 
+        //START EA2
         // Vertex data.
 
         var vertices = new Float32Array([ //
+        -5,5,0, 5,5,0, -2,2.5,0, 2,2.5,0, 0,0.05,0, 0,1,0, -0.35,0.5,0, 0.35,0.5,0, -2.5,0.05,0, -3.5,1,0, -4.5,3,0, 2.5,0.05,0, 3.5,1,0, 4.5,3,0,
+        -3.5,2.5,0, -2,1,0, 2,1,0, 3.5,2.5,0,
+        -2.5,-0.1,0, 0,-0.1,0, 2.5,-0.1,0,
+        -3.5,-1.5,0, -4.5,-5,0, -2.5,-4,0, -1,-3,0, -2,-2,0,
+        3.5,-1.5,0, 4.5,-5,0, 2.5,-4,0, 1,-3,0, 2,-2,0,
+        0,-2,0, -0.5,-1.5,0, 0.5,-1.5,0
+        ]);
 
-            -2,-3,0, 2,-3,0, 10,2,0, 3,10,0, 7,4,0, 10,-7,0, 5,9,0, -8,7,0, 0,10,0, -11,0,0,
-            3,-8,0, 5,-4,0, 6,3,0, 7,-2,0, 9,5,0, -1,4,0, 7,5,0, -3,6,0, 8,4,0, -9,3,0,
-            3,-5,0, 4,-3,0, 7,4,0, 1,7,0, -7,-7,0, 2,1,0, 4,-3,0, -7,1,0, -2,5,0, 3,6,0]);
+        //END EA2
 
-        // Colors as rgba.
-        var colors = new Float32Array([1,0,1,1, 1,0,0,1,
+        //START EA3
+
+                // Colors as rgba.
+                var colors = new Float32Array([
+             1,0,1,1, 1,0,0,1, 0,0,1,1,
              1,0,1,1, 0,1,0,1, 1,0,0,1,
              0,1,1,1, 1,1,0,1, 0,1,1,1,
              0,1,0,1, 1,1,0,1, 0,1,1,1,
              0,0,1,1, 0,0,1,1, 1,1,0,1,
              0,1,1,1, 0,1,1,1, 0,1,0,1,
-             0,0,1,1, 1,0,1,1, 1,0,0,1,
-             1,1,0,1, 1,1,0,1, 1,1,0,1,
+             1,0,0,1, 1,0,1,1, 1,0,0,1,
+             1,1,0,1, 1,1,0,1, 0,1,1,1,
              0,0,1,1, 0,1,0,1, 0,1,1,1,
              0,1,0,1, 1,0,1,1, 1,1,0,1,
-             0,0,1,1,]);
+             0,0,1,1, 0,1,0,1, 0,1,1,1,
+             0,1,0,1,
+             ]);
 
-        // Index data.
+             var indices = new Uint16Array([ //
+             0,10,14, 0,14,2, 14,15,2, 2,15,4, 10,9,14, 14,9,15, 9,8,15, 15,8,4, 
+             1,17,13, 1,3,17, 16,17,3, 4,16,3, 12,13,17, 12,17,16, 11,12,16, 
+             4,11,16, 4,7,5, 4,5,6, 
+             18,25,19, 21,25,18, 21,22,23, 21,23,25, 23,24,25, 25,24,19,
+             19,30,20, 19,29,30, 29,28,30, 28,27,26, 28,26,30, 30,26,20,
+             19,32,31, 19,31,33
+]);
 
-        var indices = new Uint16Array([ //
-
-            0,2,3,
-            3,9,2, 
-            9,24,1, 
-            5,6,19, 
-            7,0,5, 
-            19,13,6,
-            11,14,3, 
-            15,19,11, 
-            10,16,1, 
-            4,7,13, 
-            6,1,12,  
-            16,24,20, 
-            21,22,9, 
-            0,2,8,  
-            26,22,29, 
-            29,28,0,
-             23,27,25, 
-             19,6,8,
-            25,27,20,
-            15,4,17, 
-            ]);
-
-        // // Vertex data.
-
-        // var vertices = new Float32Array([ //
-
-        //     0, 2, 0, 0, 0, 0, 1, 1, 0]);
-
-        // // Colors as rgba.
-        // var colors = new Float32Array([1, 0, 0, 1, 1, 1, 0, 1,
-        //     0, 0, 1, 1,]);
-
-        // // Index data.
-
-        // var indices = new Uint16Array([ //
-        //     0, 1, 2]);
-
+        //END EA3
 
 
         // Setup position vertex buffer object.
