--- a/EA9/EA9_Procedural.html
+++ b/EA9/EA9_Procedural.html
@@ -104,7 +104,7 @@
 				vec3 vNormal = normalize(vNormal);
 								
 				float strips = mod(floor(vTextureCoord.s * 36.), 2.);
-				vec4 tColor = vec4(strips,rand(),rand(),rand());
+				vec4 tColor = vec4(strips,random(),random(),random());
 				vec4 lighting = vec4( phong(vPosition.xyz, vNormal, v), 1.0);
 				gl_FragColor = tColor * lighting;
 			}			
