--- a/EA9/EA9_Procedural.html
+++ b/EA9/EA9_Procedural.html
@@ -102,12 +102,39 @@
 				vec3 v = vec3(0,0,-1);
 				
 				vec3 vNormal = normalize(vNormal);
+
+				const int MAX_DOTS = 10;
+				struct Dot {
+					vec2 center;
+					float radius;
+				} dot[MAX_DOTS];
+				dot[0] = Dot(vec2(.1,.1), .1);
+				dot[1] = Dot(vec2(.2,.5), .2);
+				dot[2] = Dot(vec2(.1,.9), .1);
+				dot[3] = Dot(vec2(.2,1.3), .2);
+				dot[4] = Dot(vec2(.1,1.7), .1);
+				dot[5] = Dot(vec2(.7,.2), .2);
+				dot[6] = Dot(vec2(.7,.5), .1);
+				dot[7] = Dot(vec2(.7,.8), .2);
+				dot[8] = Dot(vec2(.7,1.3), .1);
+				dot[9] = Dot(vec2(.7,1.7), .2);
 								
-				float strips = mod(floor(vTextureCoord.s * 36.), 2.);
-				vec4 tColor = vec4(strips,random(),random(),random());
+				float vStrips = mod(floor(vTextureCoord.s * 36.), 2.);
+				float hStrips = mod(floor(vTextureCoord.t * 18.), 2.);			
+				float caros = vStrips * hStrips + (1.-vStrips) * (1.-hStrips);
+				vec4 tColor = vec4(1.,caros,1.,caros);
+
+				for(int i=0; i < MAX_DOTS; i++){
+					float dx =  vTextureCoord.s - dot[i].center.x;
+					float dy =  vTextureCoord.t - dot[i].center.y;
+					if(sqrt(dx*dx+dy*dy) < dot[i].radius){
+						tColor = vec4(0.,caros,0.,caros);
+						break;
+					}
+				}
 				vec4 lighting = vec4( phong(vPosition.xyz, vNormal, v), 1.0);
 				gl_FragColor = tColor * lighting;
-			}			
+			}
 		</script>
 	</head>
 	<body onload="app.start()">
