--- a/EA10/EA10.html
+++ b/EA10/EA10.html
@@ -76,6 +76,6 @@
 <br/>
 <span id="experiment"></span>
 <span id="para"></span>
-<span id="step"></span>
+<span id="step">step:166</span>
 </body>
 </html>
